--- a/views/index.haml
+++ b/views/index.haml
@@ -1,1 +1,18 @@
-%h2 Welcome to our site!
+%article
+  %header
+    %h1 Welcome to InformedNess
+    %p
+      This is a place for all internal tools relating to the platform and it's internals.
+      Please follow the links to the left to access specific tools.
+
+  -# Kept for posterity
+  -#%section
+  -#  %h2 article section h2
+  -#  %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.
+  -#%section
+  -#  %h2 article section h2
+  -#  %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.
+  -#%footer
+  -#  %h3 article footer h3
+  -#  %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.
+
