--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,6 +7,10 @@
     %meta{ :name => "viewport", :content => "width=device-width,initial-scale=1" }
     %title= MainApp::get_window_title
 
+    - styles = (!styles.nil?) ? styles : []
+    - styles.each do |style|
+      = stylesheet_link_tag style
+
     = stylesheet_link_tag "style"
     = javascript_include_tag"libs/modernizr-2.0.6.min"
 
