--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,12 +7,22 @@
     %meta{ :name => "viewport", :content => "width=device-width,initial-scale=1" }
     %title= MainApp::get_window_title
 
+    = stylesheet_link_tag "style"
+
     - styles = (!styles.nil?) ? styles : []
     - styles.each do |style|
       = stylesheet_link_tag style
 
-    = stylesheet_link_tag "style"
-    = javascript_include_tag"libs/modernizr-2.0.6.min"
+
+
+    = javascript_include_tag "libs/modernizr-2.0.6.min"
+    <script charset="utf-8" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    -#<script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
+    = javascript_include_tag "libs/jquery.cookie"
+    = javascript_include_tag "libs/jquery.hoverIntent.minified.js"
+    = javascript_include_tag "libs/jquery.dcjqaccordion.2.7.min"
+    = javascript_include_tag "script"
+
 
     = yield_content :css
     = yield_content :include
@@ -23,13 +33,8 @@
 
     #main-container
       #main{ :class => "wrapper clearfix" }
-        %aside
-          = haml :left_navigation
+        = haml :left_navigation
         = yield
 
     #footer-container
       = haml :footer
-
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
-  = javascript_include_tag "script"
