Fixed open in new window to work with ctrl/command/middle click.

--- a/views/index.haml
+++ b/views/index.haml
@@ -3,7 +3,7 @@
     %h1 Welcome to InformedNess
     %p
       This is a place for all internal tools relating to the platform and it's internals.
-      Please follow the links to the left to access specific tools.
+      Please follow the links on the left to access specific tools.
 
   -# Kept for posterity
   -#%section
