--- a/views/left_navigation_item.haml
+++ b/views/left_navigation_item.haml
@@ -6,4 +6,4 @@
         = haml :left_navigation_item, :locals => {:tools => tool["items"]}
   - else
     %li
-      %a{ :href => tool["type"] == "inline" ? tool["path"] : tool["url"], :onclick => "setTimeout(function() {window.location='#{tool["path"]}'}, 10); return false;" } #{tool["name"]}
+      %a.link{ :href => tool["type"] == "inline" ? tool["path"] : tool["url"], :"data-link" => tool["path"] } #{tool["name"]}
